--- a/package.json
+++ b/package.json
@@ -10,12 +10,36 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
+    "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/drawer": "^6.3.1",
+    "@react-navigation/material-top-tabs": "^6.1.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/stack": "^6.1.1",
+    "axios": "^0.26.0",
     "expo": "~44.0.0",
+    "expo-linear-gradient": "^11.0.3",
+    "expo-secure-store": "^11.1.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.27.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-actions-sheet": "^0.6.0",
+    "react-native-gesture-handler": "^2.3.0",
+    "react-native-pager-view": "^5.4.11",
+    "react-native-paper": "^4.11.2",
+    "react-native-reanimated": "^2.4.1",
+    "react-native-safe-area-context": "^4.1.2",
+    "react-native-screens": "^3.13.1",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-toast-message": "^2.1.1",
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
