--- a/package.json
+++ b/package.json
@@ -28,18 +28,19 @@
     "react-hook-form": "^7.27.1",
     "react-native": "0.64.3",
     "react-native-actions-sheet": "^0.6.0",
-    "react-native-gesture-handler": "^2.3.0",
-    "react-native-pager-view": "^5.4.11",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.11.2",
-    "react-native-reanimated": "^2.4.1",
-    "react-native-safe-area-context": "^4.1.2",
-    "react-native-screens": "^3.13.1",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-message": "^2.1.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
