added expo owner for dropanidea app

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
 		"slug": "dropanidea",
 		"version": "0.1.0",
 		"privacy": "public",
-		"owner": "allister",
+		"owner": "zinniaglobalconsultancy",
 		"description": "Drop an idea, we discuss together.",
 		"primaryColor": "#54A7E2",
 		"orientation": "portrait",
