--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "expo-linear-gradient": "^11.0.3",
     "expo-secure-store": "^11.1.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
+    "native-base": "^3.4.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.27.1",
@@ -34,6 +36,7 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-message": "^2.1.1",
     "react-native-web": "0.17.1",
